...
                        }
                        
                        withAnimation(.easeInOut(duration: 0.1).delay(0.1)) {
                            isSaveButtonPressed = false
                        }
                    }) {
                        Text(viewModel.selectedCard == nil ? "Add Card" : "Save Changes")
                            .font(.title2)
                            .frame(maxWidth: .infinity)
                            .foregroundStyle(.white)
                    }
                    .customRoundedGlass(interactive: true, tint: .blue, externalPressed: isSaveButtonPressed)
                }
...
            Section {
                // Text field for card title
                VStack(alignment: .leading, spacing: 8) {
                    TextField("Set card title", text: $viewModel.newCardTitle)
                        .autocapitalization(.words)
                        .disableAutocorrection(true)
                        .accessibilityIdentifier("Card Title Field")
                    
                    // Error message with animation
                    errorMessageView("CardTitleEmpty", with: viewModel.validationError, message: "Card title cannot be empty")
                }
                
                typePickerView()
...
