...
            VStack {
                Text("TrackCount")
                    .font(.system(size: 64))
                
                Grid(alignment: .center) {
                    NavigationLink(destination: TrackScreen(teamOne: $teamOne, teamTwo: $teamTwo, cardNames: $cardNames, counterStates: $counterStates, buttonStates: $buttonStates)) {
                        Text("Track It")
                            .font(.system(size: 32))
                            .padding()
                            .background(Color.blue)
                            .foregroundStyle(.white)
                            .cornerRadius(10)
                    }
...
