...
            Button(action : {
                viewModel.addGroup(with: context)
                if viewModel.validationError.isEmpty {
                    dismiss()
                }
            }) {
                Text(viewModel.selectedGroup == nil ? "Add Group" : "Save Changes")
                    .frame(maxWidth: .infinity)
                    .padding()
                    .background(Color.blue)
                    .foregroundStyle(.white)
                    .cornerRadius(8)
            }
...
