...
                                    .frame(width: 24, height: 24)
                            }
                        }
                    }
                    .foregroundStyle(.foreground)
                    .padding(.vertical, 4)
                    .accessibilityIdentifier("Group Smybol Picker")
                    
                    errorMessageView("TitleSymbolEmpty", with: viewModel.validationError, message: "A title or symbol is required")
                }
                
                if !viewModel.warnError.isEmpty {
                    Text(viewModel.warnError.joined(separator: ", "))
...
